--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,22 @@
 {
-    "printWidth": 120,
-    "tabWidth": 4,
-    "wrapAttributes": "force-expand-multiline",
-    "endWithNewLine": true,
-    "sortTailwindcssClasses": true,
-    "sortHtmlAttributes": "none",
-    "noPhpSyntaxCheck": false
+    "plugins": [
+        "@shufo/prettier-plugin-blade"
+    ],
+    "overrides": [
+        {
+            "files": [
+                "*.blade.php"
+            ],
+            "options": {
+                "parser": "blade",
+                "printWidth": 120,
+                "tabWidth": 4,
+                "wrapAttributes": "force-expand-multiline",
+                "endWithNewLine": true,
+                "sortTailwindcssClasses": true,
+                "sortHtmlAttributes": "none",
+                "noPhpSyntaxCheck": false
+            }
+        }
+    ]
 }
